# SnipSight

./: .gitignore  README.md
.github/workflows/: authentication_service.yml  main.yml  url_shortner_service.yml
api-gateway/: Cargo.toml  Dockerfile  README.md  swagger.yaml
api-gateway/src/: main.rs  regexes.yaml
api-gateway/src/controllers/: authentication_handler.rs  common.rs  mod.rs  url_shortner_handler.rs
api-gateway/src/middlewares/: authentication_middlewares.rs  common_middlewares.rs  gate_way_middlewares.rs  mod.rs  response_creator.rs  url_shortner_middlewares.rs
api-gateway/src/models/: authentication_models.rs  mod.rs  responses.rs  url_shorten_models.rs
api-gateway/src/routes/: authentication_routes.rs  file_sharing_routes.rs  mod.rs  payments_routes.rs  url_shortner_routes.rs
assets/: Highlevel.drawio
authentication_app/: Cargo.toml  Dockerfile  README.md
authentication_app/migrations/: 01_authentication_tables.sql  authentication_tables.sql
authentication_app/src/: handlers.rs  lib.rs  main.rs  middlewares.rs  state.rs
authentication_app/src/tests/: integrated_tests.rs
authentication_app/tests/: integrated_tests.rs
file_sharing_app/: Cargo.toml  README.md  go.mod  main.go
payment_app/: package-lock.json  package.json  server.js
proto-definations-snip-sight/: Cargo.toml  README.md  build.rs
proto-definations-snip-sight/proto/: file_sharing.proto  payments.proto  shortner.proto
url-shortener-app/: package-lock.json  package.json
url-shortener-app/app/: globals.css  layout.tsx  page.tsx
url-shortener-app/app/dashboard/: page.tsx
url-shortener-app/app/dashboard/insights/[shorten_url]/: page.tsx
url-shortener-app/app/sign-in/: page.tsx
url-shortener-app/app/sign-up/: page.tsx  validation.js
url-shortener-app/components/: auth-provider.tsx  navbar.tsx
url-shortener-app/hooks/: use-toast.ts
url-shortener-app/lib/: api.ts
url_shortner_app/: Cargo.toml  Dockerfile  README.md  build.rs
url_shortner_app/migrations/: 01_url_shortner.sql
url_shortner_app/proto/: shortner.proto
url_shortner_app/src/: main.rs  models.rs  server_service.rs
url_shortner_app/src/services/: analytics.rs  dynamo_db_operations.rs  mod.rs  shorten_url_write.rs
