[package]
name = "api-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tracing = "0.1.41"
tokio = {version = "1.46.1", features = ["full"]}
tracing-subscriber = "0.3.19"
serde_json = "1.0.140"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"]}
regex = "1.11.1"
hyper = { version = "1.6.0", features = ["full"] }
serde_urlencoded = "0.7.1"