[package]
name = "api-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
proto-definations-snip-sight = "0.1.4"
axum = "0.8.4"
tracing = "0.1.41"
tokio = {version = "1.46.1", features = ["full"]}
tracing-subscriber = "0.3.19"
serde_json = "1.0.140"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"]}
regex = "1.11.1"
hyper = { version = "1.6.0", features = ["full"] }
serde_urlencoded = "0.7.1"
reqwest = {version = "0.12.22", features = ["json"]}
tonic = { version = "0.13.1", features = ["transport"] }
tower-http = { version = "0.6.6", features = ["cors"] }
aws-config = "1.8.2"
aws-sdk-ssm = "1.85.0"