[package]
name = "authentication_app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tracing = "0.1.41"
tokio = {version = "1.46.1", features = ["full"]}
tracing-subscriber = "0.3.19"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "migrate"] }
argon2 = "0.5.3"
jsonwebtoken = "9.3.1" # for creating jwt tokens
chrono = "0.4.41"
log = "0.4.27" # for time expiry specification