[package]
name = "proto-definations-snip-sight"
version = "0.1.4"
edition = "2024"
build = "build.rs"
description = "Shared gRPC definations for SnipSight services"
license = "MIT"
repository = "https://github.com/phanidharguttikonda0/SnipSight"

[dependencies]
tonic = "0.13.1" # is a gRPC implementation for rust
prost = { version = "0.13.1", features = ["prost-derive", "derive"] } # is a protoBuffer implementation for rust
prost-types = "0.13.1" # making sure using the same version
serde = { version = "1.0.219", features = ["derive"] }

[build-dependencies]
tonic-build = "0.13.1"